# claude-plugin-connector-creator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
agents/: api-connector-creator.md  connector-drift-classifier.md  connector-provider-researcher.md  connector-schema-validator.md  db-connector-creator.md  endpoint-creator.md  storage-connector-creator.md
docs/design/: contract-derived-research.md  drift-audit.md
scripts/: validate_connector.py
skills/connector-builder/: SKILL.md
skills/connector-builder/references/: connection-contract.md  definition-of-done.md  enum-mappers.md  io-contracts.md  lifecycle-phases.md  metadata-and-versioning.md  pipeline.md  value-expressions.md
skills/connector-spec-api/: SKILL.md  spec-auth-flows.md  spec-pagination.md  spec-replication.md  spec-transport.md
skills/connector-spec-db/: SKILL.md  spec-connector-package.md  spec-driver-selection.md  spec-dsn-bindings.md  spec-resource-discovery.md  spec-tls.md  spec-type-maps.md
skills/connector-spec-storage/: SKILL.md
tests/connector_validator/: test_schema_drift.py  test_validator.py
tests/connector_validator/fixtures/: invalid_auth_shape_oauth_cc.json  invalid_dsn_unbound.json  invalid_phase_auth_in_authorize.json  invalid_phase_auth_input_in_authorize.json  invalid_phase_oauth_code_in_authorize.json  invalid_phase_oauth_runtime_on_apikey.json  invalid_phase_pagination_outside_op.json  (+22 more)
validator/: README.md  pyproject.toml
validator/src/: analitiq_connector_validator.py
(+48 files in other folders)
